tabs.css
/*----- Tabs -----*/
.tabs {
    width:100%;
    display:inline-block;
    text-align:center;
}
 
    /*----- Tab Links -----*/
    
    .tab-links {
    	/*margin:0;*/
    	display:inline-block;
    	text-align: center;
    }
    
    /* Clearfix */
    .tab-links:after {
        display:block;
        clear:both;
        content:'';
    }
 
    .tab-links > div {
        margin:0px 2px;
        display: inline-block;
        vertical-align:bottom;
        position:relative;
    	z-index:0;
    }
    
    .tab-links > div:first-child {
    	padding: 0px 0px 0px 20px;
    }
    
    #bracket-tab-link {
    	padding: 0px 20px 0px 0px;
    }
 
        .tab-links a {
            padding:9px 9px;
            display:inline-block;
            border-radius:6px 6px 0px 0px; 
background: rgba(243,243,243,1);
background: -moz-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(243,243,243,1)), color-stop(50%, rgba(191,193,194,1)), color-stop(100%, rgba(172,172,172,1)));
background: -webkit-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
background: -o-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
background: -ms-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
background: linear-gradient(to bottom, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#acacac', GradientType=0 );
			-webkit-background-size: 100% 100%;
			-moz-background-size: 100% 100%; 
            background-size:100% 100%;  
            font-size:x-large;
            font-weight:600;
            font-family:"Brasil2014";
            color: rgba(0,0,0, 0.6);
    		text-shadow: 1px 4px 6px #def, 0 0 0 #000, 1px 4px 6px #def;
            text-decoration:none;
            border-bottom: 5px solid #ACACAC;
            
            opacity:0.95;
            box-shadow: 2px -2px 4px #000;
    		webkit-box-shadow: 2px -2px 4px #000;
    		moz-box-shadow: 2px -2px 4px #000;
            -webkit-transition:all linear 0s;
            -moz-transition:all linear 0s;
            -ms-transition:all linear 0s;
            -o-transition:all linear 0s;
            transition:all linear 0s;
        }
 
        .tab-links a:hover {
			-webkit-background-size: 100% 500%;
			-moz-background-size: 100% 500%;
			background-size:100% 500%;
            text-decoration:none;
            -webkit-transition:all linear 0.3s;
            -moz-transition:all linear 0.3s;
            -ms-transition:all linear 0.3s;
            -o-transition:all linear 0.3s;
            transition:all linear 0.3s;
            box-shadow: none;
   			-webkit-box-shadow: none;
    		-moz-box-shadow: none;
        }
        
        .tab-links img {
        	/*vertical-align:middle;*/
        	padding: 2px;
        }
        
        .tab-links .leftflags {
        	display:inline-block;
			vertical-align:middle;
			margin-right:5px;
        }
        
        .tab-links .rightflags {
        	display:inline-block;
			vertical-align:middle;
			margin-left:5px;
        }
 
    div.active a, div.active a:hover {
		-webkit-background-size: 100% 500%;
		-moz-background-size: 100% 500%;
		background-size:100% 500%;
		text-decoration:none;
		/*border-color:red;*/
		box-shadow: none;
   		-webkit-box-shadow: none;
    	-moz-box-shadow: none;
    }
    
    /*.tab-links > div:last-child a {
    	height:100%;
    }*/
 
    /*----- Content of Tabs -----*/
    .tab-content {

        /*border-radius:3px;
        box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
        background:#fff;*/
    }
 
        .tab {
        	/*padding:15px;*/
            display:none;
        }
 
        .tab.active {
            display:block;
        }
        
    /*----- Tabbed buttons -----*/
    
    .tabbed-buttons div {
    	display:none;
    }

